<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/findmebg"
    android1:gravity="center_horizontal" >

    <Button
        android1:id="@+id/btncancelar"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_alignParentBottom="true"
        android1:layout_alignParentRight="true"
        android1:layout_marginBottom="78dp"
        android1:layout_marginRight="20dp"
        android1:onClick="onClickCancelar"
        android1:text="@string/cancelar"
        android1:textColor="#ffffff"
        android1:textSize="18sp"
        android1:textStyle="normal|bold" />

    <Button
        android1:id="@+id/btnguardar"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_alignBaseline="@+id/btncancelar"
        android1:layout_alignBottom="@+id/btncancelar"
        android1:layout_alignParentLeft="true"
        android1:layout_marginLeft="20dp"
        android1:layout_marginBottom="78dp"
        android1:onClick="onSaveClick"
        android1:text="@string/savechange"
        android1:textColor="#ffffff"
        android1:textSize="18sp"
        android1:textStyle="normal|bold" />

    <EditText
        android1:id="@+id/eTNewPswrd"
        android1:layout_width="-5dp"
        android1:layout_height="wrap_content"
        android1:layout_above="@+id/btncancelar"
        android1:layout_alignLeft="@+id/btnguardar"
        android1:layout_marginBottom="126dp"
        android1:background="#ffffff"                                                             
        android1:ems="10"
        android1:inputType="textPassword"
        android1:textColor="#000000" />

    <EditText
        android1:id="@+id/eTOldPswrd"
        android1:layout_width="-5dp"
        android1:layout_height="wrap_content"
        android1:layout_above="@+id/eTNewPswrd"
        android1:layout_alignLeft="@+id/eTNewPswrd"
        android1:layout_marginBottom="34dp"
        android1:background="#ffffff"
        android1:ems="10"
        android1:inputType="textPassword"
        android1:textColor="#000000" />

    <TextView
        android1:id="@+id/tVOldPswrd"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_above="@+id/eTOldPswrd"
        android1:layout_alignLeft="@+id/eTOldPswrd"
        android1:text="@string/oldpswrd"
        android1:textColor="#ffffff"
        android1:textSize="@dimen/tam15"
        android1:textStyle="bold" />

    <TextView
        android1:id="@+id/tVConfirmPswrd"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_alignLeft="@+id/eTNewPswrd"
        android1:layout_centerVertical="true"
        android1:text="@string/confirmnewpswrd"
        android1:textColor="#ffffff"
        android1:textSize="@dimen/tam15"
        android1:textStyle="bold" />

    <EditText
        android1:id="@+id/eTConfirmNewPswrd"
        android1:layout_width="-5dp"
        android1:layout_height="wrap_content"
        android1:layout_alignLeft="@+id/tVConfirmPswrd"
        android1:layout_below="@+id/tVConfirmPswrd"
        android1:background="#ffffff"
        android1:ems="10"
        android1:inputType="textPassword"
        android1:textColor="#000000" />

    <TextView
        android1:id="@+id/tVNewpswrd"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_above="@+id/eTNewPswrd"
        android1:layout_alignLeft="@+id/eTOldPswrd"
        android1:text="@string/newpswrd"
        android1:textColor="#ffffff"
        android1:textSize="@dimen/tam15"
        android1:textStyle="bold" />

    <EditText
        android1:id="@+id/eTEEmail"
        android1:layout_width="-5dp"
        android1:layout_height="wrap_content"
        android1:layout_above="@+id/tVOldPswrd"
        android1:layout_alignLeft="@+id/tVOldPswrd"
        android1:layout_marginBottom="19dp"
        android1:background="#ffffff"
        android1:ems="10"
        android1:inputType="textEmailAddress"
        android1:textColor="#000000" />

    <TextView
        android1:id="@+id/tVEmail"
        android1:layout_width="-5dp"
        android1:layout_height="wrap_content"
        android1:layout_above="@+id/eTEEmail"
        android1:layout_alignLeft="@+id/eTEEmail"
        android1:text="@string/correo"
        android1:textColor="#ffffff"
        android1:textSize="@dimen/tam15"
        android1:textStyle="bold" />

</RelativeLayout>
