<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/findmebg"
    android1:gravity="clip_vertical" >

    <Button
        android1:id="@+id/botonConf"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_alignParentBottom="true"
        android1:layout_alignParentLeft="true"
        android1:layout_marginBottom="55dp"
        android1:layout_marginLeft="15dp"
        android1:onClick="onConfigurarClick"
        android1:text="@string/config"
        android1:textColor="#ffffff"
        android1:textSize="18sp"
        android1:textStyle="normal|bold" />

    <Button
        android1:id="@+id/button2"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_alignBaseline="@+id/botonConf"
        android1:layout_alignBottom="@+id/botonConf"
        android1:layout_alignParentRight="true"
        android1:layout_marginRight="15dp"
        android1:onClick="onAboutClick"
        android1:text="@string/acerca"
        android1:textColor="#ffffff"
        android1:textSize="18sp"
        android1:textStyle="bold|normal" />

    <TextView
        android1:id="@+id/textView1"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_above="@+id/botonConf"
        android1:layout_centerHorizontal="true"
        android1:layout_marginBottom="60dp"
        android1:text="@string/txtpulsa"
        android1:textAppearance="?android:attr/textAppearanceSmall"
        android1:textColor="#ffffff"
        android1:textSize="@dimen/tam15"
        android1:textStyle="bold" />
    <ToggleButton
        android1:id="@+id/botonImagen"
        android1:layout_width="match_parent"
        android1:layout_height="match_parent"
        android1:layout_above="@+id/textView1"
        android1:layout_alignParentLeft="true"
        android1:layout_centerInParent="true"
        android1:layout_marginBottom="25dp"
        android1:layout_marginTop="38dp"
        android1:background="@null"
        android1:drawableTop="@drawable/findmebtnnormal"
        android1:scaleType="fitCenter"
        android1:text="ToggleButton"
        android1:textColor="#ffffff"
        android1:textOff="Desactivado"
        android1:textOn="Activado"
        android1:textSize="@dimen/tam15"
        android1:textStyle="normal|bold" />

</RelativeLayout>